# freestati

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json
.claude/: settings.json
scripts/: build-renderer.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  lib.rs  main.rs  sav.rs  stats.rs
src/main/: main.ts  preload.ts
src/main/ipc/: fileHandlers.ts  pythonBridge.ts
src/main/python/: engine.py  requirements.txt
src/renderer/: bridge.ts  global.d.ts  index.html  renderer.ts  styles.css
src/renderer/components/: App.ts  DataView.ts  FileExplorer.ts  OutputView.ts  StatusBar.ts  SyntaxView.ts  VariableView.ts  charts.ts  dialogs.ts  syntax.ts
src/renderer/stores/: dataStore.ts  outputStore.ts  syntaxStore.ts
src/renderer/types/: analysis.ts  dataset.ts
