[package]
name = "freestati"
version = "1.0.0"
description = "FreeStati — free, cross-platform statistical analysis"
authors = ["FreeStati"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "freestati_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.45", default-features = false, features = [
    "csv",
    "json",
    "lazy",
    "fmt",
    "strings",
    "regex",
    "round_series",
] }
ambers = "0.4.2"
arrow = "57"
rayon = "1.10.0"
ndarray = "0.17.2"
rmp-serde = "1.3.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
